# testing_for_encoding

./: Dockerfile  bitbucket-pipelines.yml
cpp_template_project/: .clang-tidy  .gitignore  CMakeLists.txt
cpp_template_project/include/encoding_library/: encode_constants.h  encode_lib.h
cpp_template_project/source/: CMakeLists.txt  encode_lib.cpp  main.cpp
cpp_template_project/tests/: CMakeLists.txt  unit_tests.cpp
